fixed scrolling issues on iphone

--- a/examples/spain.js/scss/page.scss
+++ b/examples/spain.js/scss/page.scss
@@ -33,8 +33,8 @@ a {
 	position: absolute !important;
 	overflow: hidden;
 	padding-right: 40px !important;
-	top: -2.5em;
-	height: 3em;
+	top: -3.5em;
+	height: 3.5em;
 	width: 100%;
 	&.active {
 		top: 2.5em;
